# DiplomProject

./: CMakeLists.txt  DiplomProject.pro  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  Полезные ссылки на сайты
Программа/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
Программа/release/: moc_mainwindow.cpp
